--- a/config.json
+++ b/config.json
@@ -1,27 +1,27 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
-    "footer": "2023 © api.zeeoneofc.my.id",
+    "ownerNumber": ["94725877280@s.whatsapp.net","94713499838@s.whatsapp.net"],
+    "ownerName": "*🛡 ᴹᴿ᭄ KeSitha LK  ×፝֟͜× 🛡*",
+    "instagram" : "https://instagram.com/",
+    "gcwa" : "https://instabio.cc/",
+    "botName": "Alpha-Mdོ ",
+    "footer": "2023 © apikesothaofc.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
     "BotKey": "your key",
     "OpenAIKey": "your openai key",
-    "audio_di_bagian_menu": "./menu.mp3",
-    "auto_ai_japri": false,
-    "auto_ai_grup": false,
+    "audio_di_bagian_menu": "./ahenawada.mp3",
+    "auto_ai_japri": true,
+    "auto_ai_grup": true,
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true, 
     "antiViewOnce": true,
-    "grupOnly": false,
+    "grupOnly": true,
     "japriOnly": false, 
     "antiDelete": false,
     "autobio": false,
     "anticall": true,
-    "autorespond": false,
+    "autorespond": true,
     "autoblok212": true,
     "autoread": true,
     "gamewaktu": 90,
