--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
     "ownerNumber": ["94725877280@s.whatsapp.net","94713499838@s.whatsapp.net"],
-    "ownerName": "*🛡 ᴹᴿ᭄ KeSitha LK  ×፝֟͜× 🛡*",
+    "ownerName": "*🛡 ᴹᴿ 𝙻𝙴𝙰𝙷 ×፝֟͜× 🛡*",
     "instagram" : "https://instagram.com/",
     "gcwa" : "https://instabio.cc/",
     "botName": "Alpha-Mdོ ",
     "footer": "2023 © apikesothaofc.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
-    "pathimg": "./Haruka.jpg",
+    "pathimg": "https://i.imgur.com/3q0FK12.jpg",
     "BotKey": "your key",
     "OpenAIKey": "your openai key",
     "audio_di_bagian_menu": "./ahenawada.mp3",
