--- a/config.json
+++ b/config.json
@@ -4,10 +4,10 @@
     "instagram" : "https://instagram.com/",
     "gcwa" : "https://instabio.cc/",
     "botName": "Alpha-Mdོ ",
-    "footer": "2023 © apikesothaofc.my.id",
+    "footer": "2023 © api.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
-    "pathimg": "https://i.imgur.com/3q0FK12.jpg",
+    "pathimg": "./Haruka",
     "BotKey": "your key",
     "OpenAIKey": "your openai key",
     "audio_di_bagian_menu": "./ahenawada.mp3",
